non_executable_reasons_record_from_random_10k/3434.txt
3.5
An error occurred while executing the following cell:
------------------
ax.
------------------

[0;36m  File [0;32m"<ipython-input-25-03778a321bf7>"[0;36m, line [0;32m1[0m
[0;31m    ax.[0m
[0m       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-25-03778a321bf7>, line 1)

Executability                            : False
